# prim

./: .gitignore  LICENSE  README.md  dump.rdb
app/: .env  (+4 more)
client/src-tauri/: Cargo.toml  prim_kv-kv-1-value  prim_msg.db  tauri.conf.json
client/src-tauri/src/: main.rs
client/src-tauri/src/config/: mod.rs
client/src-tauri/src/core/: client.rs
client/src-tauri/src/entity/: msg.rs
client/src-tauri/src/service/: database.rs  http.rs  mod.rs
client/src-tauri/src/util/: base.rs
old_client/src-tauri/: Cargo.toml  tauri.conf.json
old_client/src-tauri/src/: main.rs
old_client/src-tauri/src/core/: client.rs
server/: Cargo.toml  Dockerfile  build-aarch64-linux.sh  build-amd64-linux.sh  cross-compile.sh  docker-compose-aarch64.yaml  docker-compose-amd64.yaml  docker-compose.yml  docker-quickstart.sh  dockerfile-api  dockerfile-message  dockerfile-recorder  dockerfile-scheduler  dockerfile-seqnum  push-registry-aarch64-linux.sh  push-registry-amd64-linux.sh  seqnum-archive-236.out  seqnum-temp-236.out
server/api/: Cargo.toml  config-example.toml  config-quickstart.toml  config.toml  init.sql
server/api/src/: main.rs
server/api/src/cache/: mod.rs
server/api/src/config/: mod.rs
server/api/src/entity/: mod.rs  msg.rs  user.rs
server/api/src/error/: mod.rs
server/api/src/handler/: file.rs  group.rs  mod.rs  msg.rs  relationship.rs  user.rs
server/api/src/model/: group.rs  mod.rs  msg.rs  relationship.rs  user.rs
server/api/src/rpc/: mod.rs  node.rs  node_proto.rs
server/api/src/sql/: mod.rs
server/api/src/util/: jwt.rs  mod.rs
server/balancer/: Cargo.toml  README.md  config-example<replace my name with 'config'>.toml
server/balancer/src/: main.rs
server/balancer/src/cache/: mod.rs  redis_ops.rs
server/balancer/src/config/: mod.rs
server/balancer/src/inner/: cluster.rs  mod.rs  server.rs
server/balancer/src/outer/: mod.rs
server/business/: Cargo.toml  init.sql
server/business/src/: main.rs
server/business/src/config/: mod.rs
server/business/src/entity/: msg.rs
server/business/src/sql/: mod.rs
server/cert/: cmd.sh  localhost.cert.der  localhost.cert.pem  localhost.conf  localhost.key.der  localhost.key.pem  tls.sh
server/cert/env1/: cmd.sh  local-ip1.cert.der  local-ip1.cert.pem  local-ip1.conf  local-ip1.key.der  local-ip1.key.pem
server/cert/env2/: local-ip2.conf
server/common/: Cargo.toml
server/common/src/: lib.rs
server/common/src/cache/: redis_ops.rs
server/common/src/entity/: mod.rs  msg.rs  node_info.rs  replay.rs  server.rs
server/common/src/error/: mod.rs
server/common/src/joy/: mod.rs
server/common/src/net/: client.rs  mod.rs  server.rs
server/common/src/scheduler/: mod.rs
server/common/src/util/: jwt.rs  mod.rs
server/core/: Cargo.toml
server/core/src/: main.rs  mod.rs
server/core/src/entity/: msg.rs
server/core/src/logic/: connection.rs  mod.rs
server/golang/lib-go/: go.mod
server/golang/lib-go/entity/: msg.go
server/golang/msglogger-client/: go.mod  main.go
server/golang/seqnum-client/: go.mod  main.go
server/kafka-cluster/: cmd.sh  server-1.properties  server-2.properties  server-3.properties  server-single.properties  server1.properties  server2.properties  server3.properties  single-cmd.sh
server/kafka-test/consumer/: Cargo.toml
server/kafka-test/consumer/src/: main.rs
server/kafka-test/producer/: Cargo.toml
server/kafka-test/producer/src/: main.rs
server/lib/: Cargo.toml
server/lib-go/: go.mod  go.sum  lib.go
server/lib-go/entity/: msg.go
server/lib-net-monoio/: Cargo.toml
server/lib-net-monoio/src/: lib.rs
server/lib-net-monoio/src/net/: client.rs  mod.rs  server.rs
server/lib-net-tokio/: Cargo.toml
server/lib-net-tokio/src/: lib.rs
server/lib-net-tokio/src/cache/: redis_ops.rs
server/lib-net-tokio/src/net/: client.rs  mod.rs  server.rs
server/lib/src/: lib.rs
server/lib/src/cache/: redis_ops.rs
server/lib/src/entity/: mod.rs  msg.rs  server.rs
server/lib/src/error/: mod.rs
server/lib/src/net/: client.rs  client_reqwest.rs  mod.rs  server.rs  server_reqwest.rs
server/lib/src/util/: jwt.rs  map.rs  mod.rs
server/message/: Cargo.toml  Cross.toml  README.md  config-example.toml  config-example<change my name to config>.toml  config-quickstart.toml  config.toml  entrypoint.sh
server/message/cluster/: config1.toml  config2.toml  config3.toml  config4.toml  config5.toml
server/message/src/: main.rs  mod.rs
server/message/src/cache/: mod.rs  redis_ops.rs
server/message/src/cluster/: client.rs  mod.rs  server.rs
server/message/src/config/: mod.rs
server/message/src/core/: biz.rs  cluster.rs  connection.rs  heartbeat.rs  logic.rs  mock.rs  mod.rs  net.rs  server.rs
server/message/src/entity/: mod.rs  msg.rs
server/message/src/joy/: mod.rs
server/message/src/onstart/: mod.rs  register.rs
server/mock/: Cargo.toml
server/mock/src/: main.rs
server/msglogger/: Cargo.toml
server/msglogger/src/: logger.rs  main.rs  recv.rs
server/msgprocessor/: Cargo.toml
server/msgprocessor/src/: main.rs
server/postgres/: init.sh  init.sql
server/recorder/: Cargo.toml  config-quickstart.toml
server/recorder/src/: main.rs
server/redis-cluster/: cmd.sh  docker-cluster.sh
server/redis-cluster/16379/: redis.conf
server/redis-cluster/16380/: redis.conf
server/redis-cluster/16381/: redis.conf
server/redis-cluster/26379/: redis.conf
server/redis-cluster/26380/: redis.conf
server/redis-cluster/26381/: redis.conf
server/redis-cluster/appendonlydir/: appendonly.aof.1.base.rdb
server/replay/: Cargo.toml
server/replay/src/: main.rs
server/scheduler/: Cargo.toml  config-example.toml  config-quickstart.toml
server/scheduler/src/: main.rs
server/script/: wait_scheduler.sh
server/seqnum/: Cargo.toml  config-example.toml  config-quickstart.toml
server/seqnum-client/: go.mod
server/seqnum-go/: go.mod
server/seqnum/src/: main.rs
ui-prototype/src-tauri/: Cargo.toml  config-example.toml  config.toml  prim_kv.sqlite  tauri.conf.json
ui-prototype/src-tauri/.cargo/: config
ui-prototype/src-tauri/src/: main.rs
(+457 files in other folders)
