[workspace]
resolver = "2"

members = [
    "./lib",
    "./lib-net-tokio",
    "./lib-net-monoio",
    "./common",
    "./api",
    "./mock",
    "./seqnum",
    "./message",
    "./scheduler",
    "./msglogger",
    "./msgprocessor",
    "./kafka-test/consumer",
    "./kafka-test/producer",
]

[workspace.dependencies]
anyhow = "1.0"
ahash = "0.8"
async-trait = "0.1.60"
async-channel = "1.7.0"
byteorder = "1.4.0"
base64 = "0.21"
bytes = "1.4"
dashmap = "5.4"
fastrand = "2.0"
futures = "0.3"
jsonwebtoken = "8.2"
local-sync = "0.1.0"
monoio = "0.1.6"
monoio-rustls = "0.1.5"
num-traits = "0.2"
num-derive = "0.3"
rustls = "0.21"
redis = "0.23"
redis_cluster_async = "0.8"
rusqlite = "0.29"
sqlx = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
thiserror = "1.0"
tokio = "1.29"
uuid = "1.4"
