[workspace]
resolver = "2"

members = [
    "./lib",
    "./lib-net-tokio",
    "./lib-net-monoio",
    "./common",
    "./api",
    "./mock",
    "./seqnum",
    "./message",
    "./scheduler",
    "./msglogger",
    "./msgprocessor",
    "./kafka-test/consumer",
    "./kafka-test/producer",
]

[workspace.dependencies]
anyhow = "1.0"
ahash = "0.8"
async-trait = "0.1.60"
async-channel = "1.7.0"
byteorder = "1.4.0"
base64 = "0.21"
bytes = "1.4"
dashmap = "5.4"
chrono = "0.4"
fastrand = "2.0"
futures = "0.3"
jsonwebtoken = "8.2"
lazy_static = "1.4"
local-sync = "0.1"
monoio = "0.1.6"
monoio-rustls = "0.1.5"
num-traits = "0.2"
num-derive = "0.3"
prost = "0.11"
quinn = "0.10"
rustls = "0.21"
redis = "0.23"
redis_cluster_async = "0.8"
rusqlite = {version = "0.29", features = ["bundled"]}
sqlx = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
thiserror = "1.0"
tokio = "1.29"
tokio-rustls = "0.24"
tonic = { version = "0.9", features = ["tls"] }
toml = "0.7.5"
uuid = "1.4"
