[package]
name = "client"
version = "0.1.0"
description = "A Tauri App"
authors = ["cwb"]
license = ""
repository = ""
default-run = "client"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
lazy_static = "1.4.0"
ticker = "0.1.1"
delay_timer = "0.11.0"
chrono = "0.4.22"
byteorder = "1.4.0"
log = "0.4.0"
env_logger = "0.9.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
