[package]
name = "prim-client"
version = "0.2.0"
description = "prim client app"
authors = ["csw, msl"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
lib = {path = "../../server/lib"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.1", features = [] }
tokio = {version = "1.20.0", features = ["full"] }
base64 = "0.13.0"
lazy_static = "1.4.0"
tracing = "0.1.35"
futures-util = "0.3.20"
tracing-subscriber = "0.3.15"
anyhow = "1.0.65"
thiserror = "1.0.37"
rustls = "0.20.0"
async-trait = "0.1.57"
toml = "0.5.9"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
