[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-net-tokio = { version = "0.1.0", path = "../lib-net-tokio" }
sqlx = { version = "0.6.2", features = ["postgres", "chrono"] }
tokio = { version = "1.21.0", features = ["full"] }
lazy_static = "1.4.0"
tracing = "0.1.35"
futures-util = "0.3.20"
tracing-subscriber = "0.3.15"
toml = "0.5.9"
anyhow = "1.0.65"
thiserror = "1.0.37"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.89"
chrono = { version = "0.4.22", features = ["serde", "std"] }
salvo = { version = "*", features = ["cors", "anyhow", "openssl"] }
tonic = { version = "0.8.2", features = ["tls"] }
tonic-build = "0.8.2"
prost = "0.11.0"
structopt = "0.3.26"
fastrand = "1.8.0"
rustls = "0.20.0"
base64 = "0.13.0"
jsonwebtoken = "8.2.0"
async-trait = "0.1.57"
hmac = "0.12.1"
sha2 = "0.10.6"
hex = "0.4.3"
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
num-traits = "0.2.15"
num-derive = "0.3.3"
