[package]
name = "api"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
lib-net-tokio = { path = "../lib-net-tokio" }
common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["sync"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
anyhow = "1.0"
thiserror = "1.0"
ahash = "0.8"
async-trait = "0.1.60"
byteorder = "1.4.0"
jsonwebtoken = "8.2"
async-channel = "1.7.0"
dashmap = "5.4"
futures = "0.3"
async-recursion = "1.0"
tonic = { version = "0.9", features = ["tls"] }
tonic-build = "0.9"
prost = "0.11"
structopt = "0.3"
lazy_static = {version = "1.4.0"}
base64 = "0.21"
rustls = "0.21"
toml = "0.7.5"
chrono = { version = "0.4", features = ["serde", "std"] }
salvo = { version = "0.45", features = ["cors", "anyhow", "openssl"] }
fastrand = "2.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
num-traits = "0.2"
num-derive = "0.3"
