[package]
name = "api"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
lib-net-tokio = { path = "../lib-net-tokio" }
common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true }
async-trait = { workspace = true }
byteorder = { workspace = true }
jsonwebtoken = { workspace = true }
async-channel = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
structopt = { workspace = true }
lazy_static = { workspace = true }
base64 = { workspace = true }
rustls = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true, features = ["serde", "std"] }
fastrand = { workspace = true }
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
] }
uuid = { workspace = true, features = ["v4", "fast-rng", "macro-diagnostics"] }
num-traits = { workspace = true }
num-derive = { workspace = true }
salvo = { version = "0.45", features = ["cors", "anyhow", "rustls", "quinn"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
async-recursion = "1.0"
