[package]
name = "common"
version = "0.1.0"
edition = "2021"
description = "Common code for all projects"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib", version = "0.1.0" }
async-trait = "0.1.57"
tokio = { version = "1.20.0", features = ["full"] }
anyhow = "1.0.65"
thiserror = "1.0.37"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
ahash = "0.8.0"
