[package]
name = "common"
version = "0.1.0"
edition = "2021"
description = "Common code for all projects"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib", version = "0.1.0" }
lib-net-tokio = { path = "../lib-net-tokio", version = "0.1.0" }
tokio = { version = "1.29", features = ["sync"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
anyhow = "1.0"
thiserror = "1.0"
ahash = "0.8"
async-trait = "0.1.60"
