[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.20.0", features = ["full"]}
redis = "0.21.0"
serde = {version = "1.0.140", features = ["derive"]}
tonic = "0.8.0"
ahash = "0.7.6"
byteorder = "1.4.0"
tracing = "0.1"
tracing-subscriber = "0.2"