[package]
name = "lib-net-monoio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = {path = "../lib"}
monoio = {version = "0.1.4", features = []}
monoio-rustls = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29", features = ["sync"] }
byteorder = "1.4.0"
async-trait = "0.1.60"
async-channel = "1.7.0"
anyhow = "1.0"
thiserror = "1.0"
ahash = "0.8"
dashmap = "5.4"
bytes = "1.4"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
rustls = "0.21"
futures = "0.3"
