[package]
name = "lib-net-tokio"
version = "0.2.5"
edition = "2021"
description = "A library for interacting with the network."

[features]
no-check = []
no-select = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = {path = "../lib"}
tokio = { version = "1.29", features = ["full"] }
quinn = "0.10"
tokio-rustls = "0.24"
rustls = "0.21"
async-trait = "0.1.60"
async-channel = "1.7.0"
anyhow = "1.0"
thiserror = "1.0"
ahash = "0.8"
dashmap = "5.4"
bytes = "1.4"
byteorder = "1.4.0"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
futures = "0.3"
async-recursion = "1.0"