[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.87"
byteorder = "1.4.0"
jsonwebtoken = "8.2.0"
quinn = "0.8.5"
async-trait = "0.1.57"
async-channel = "1.7.0"
anyhow = "1.0.65"
thiserror = "1.0.37"
ahash = "0.8.0"
dashmap = "5.4.0"
tokio = { version = "1.20.0", features = ["full"] }
tracing = "0.1.35"
rustls = "0.20.0"
tokio-rustls = "0.23.4"
futures-util = "0.3.20"
redis = { version = "0.21.0", features = ["tokio-comp", "cluster"] }
redis_cluster_async = "0.7.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
num-traits = "0.2.15"
num-derive = "0.3.3"