[package]
name = "lib"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
anyhow = "1.0"
thiserror = "1.0"
ahash = "0.8"
async-trait = "0.1.60"
byteorder = "1.4.0"
jsonwebtoken = "8.2"
async-channel = "1.7.0"
dashmap = "5.4"
base64 = "0.21"
bytes = "1.4"
rustls = "0.21"
futures = "0.3"
redis = { version = "0.23" }
redis_cluster_async = "0.8"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
num-traits = "0.2"
num-derive = "0.3"
rusqlite = "0.29"
fastrand = "2.0"
async-recursion = "1.0"
