[package]
name = "message"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common", version = "0.2.0" }
tokio = {version = "1.20.0", features = ["full"]}
redis = {version = "0.21.0", features = ["tokio-comp", "cluster"]}
redis_cluster_async = "0.7.0"
serde = {version = "1.0.140"}
serde_derive = "1.0.145"
tonic = "0.8.2"
byteorder = "1.4.0"
tracing = "0.1.35"
futures-util = "0.3.20"
tracing-subscriber = "0.3.15"
dashmap = "5.4.0"
quinn = "0.8.5"
anyhow = "1.0.65"
thiserror = "1.0.37"
url = "2.3.0"
rustls = "0.20.0"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
toml = "0.5.9"
jwt-simple = "0.11.1"
async-channel = "1.7.0"
rand = "0.8.5"
ahash = "0.8.0"
lazy_static = "1.4.0"