[package]
name = "message"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
lib-net-tokio = { path = "../lib-net-tokio" }
common = { path = "../common" }
serde = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true }
async-trait = { workspace = true }
jsonwebtoken = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
tonic = { workspace = true }
structopt = { workspace = true }
lazy_static = { workspace = true }
base64 = { workspace = true }
rustls = { workspace = true }
toml = { workspace = true }
byteorder = { workspace = true }
prost = { workspace = true }
rdkafka = { version = "0.33", features = ["cmake-build"] }
tonic-build = "0.9"
sysinfo = "0.29"
