[package]
name = "mock"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-net-tokio = { path = "../lib-net-tokio", features = ["no-check"]}
tokio = {version = "1.29", features = ["full"]}
serde = {version = "1.0.140", features = ["derive"]}
serde_json = "1.0.87"
byteorder = "1.4.0"
tracing = "0.1.35"
futures-util = "0.3.20"
tracing-subscriber = "0.3.15"
dashmap = "5.4.0"
quinn = "0.8.5"
anyhow = "1.0.65"
thiserror = "1.0.37"
rustls = "0.20.0"
async-trait = "0.1.57"
toml = "0.5.9"
base64 = "0.13.0"
jsonwebtoken = "8.2.0"
async-channel = "1.7.0"
ahash = "0.8.0"
lazy_static = "1.4.0"
tonic = {version = "0.8.2", features = ["tls"]}
tonic-build = "0.8.2"
prost = "0.11.0"
structopt = "0.3.26"
fastrand = "1.8.0"
