[package]
name = "mock"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
lib-net-tokio = { path = "../lib-net-tokio", features = ["no-check"]}
tokio = {version = "1.29", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1.60"
ahash = "0.8"
lazy_static = "1.4.0"
rustls = "0.21"
tonic = { version = "0.9", features = ["tls"] }
toml = "0.7.5"
