[package]
name = "msglogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-net-tokio = { path = "../lib-net-tokio", version = "0.1.0", features = [] }
tokio = { version = "1.20.0", features = ["full"] }
monoio = {version = "0.1.4", features = []}
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
libc = "0.2.146"
