[package]
name = "msglogger"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
lib-net-monoio = { path = "../lib-net-monoio", features = [] }
monoio = { workspace = true, features = ["iouring"] }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lazy_static = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
local-sync = { workspace = true }
byteorder = { workspace = true }
sysinfo = "0.29"
