[package]
name = "msgprocessor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-net-tokio = { path = "../lib-net-tokio", features = [] }
tokio = { version = "1.29", features = ["full"] }
monoio = {version = "0.1.5", features = []}
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.87"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
futures-util = "0.3.20"
anyhow = "1.0.65"
thiserror = "1.0.37"
async-trait = "0.1.57"
rdkafka = "0.32.2"
