[package]
name = "replay"
version = "0.2.0"
edition = "2021"
description = "replay is a mechanism to make certain request must be handle successlly by remote component, and if not get successed response from target component, replay will let sender noticated."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common", version = "0.2.0" }
tokio = {version = "1.20.0", features = ["full"]}
serde = {version = "1.0.140", features = ["derive"]}
serde_json = "1.0.87"
tracing = "0.1.35"
futures-util = "0.3.20"
tracing-subscriber = "0.3.15"
dashmap = "5.4.0"
quinn = "0.8.5"
anyhow = "1.0.65"
thiserror = "1.0.37"
rustls = "0.20.0"
async-trait = "0.1.57"
toml = "0.5.9"
async-channel = "1.7.0"
ahash = "0.8.0"
lazy_static = "1.4.0"
delay_timer = "0.11.3"
structopt = "0.3.26"