[package]
name = "scheduler"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
lib-net-tokio = { version = "0.1.0", path = "../lib-net-tokio" }
tokio = { version = "1.29", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.4"
ahash = "0.8"
lazy_static = "1.4"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
toml = "0.7.5"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4.25", features = ["serde"] }
async-trait = "0.1.60"
base64 = "0.21"
rustls = "0.21"
async-channel = "1.7.0"
tonic = { version = "0.9", features = ["tls"] }
tonic-build = "0.9"
prost = "0.11"
structopt = "0.3"
fastrand = "2.0"
