[package]
name = "scheduler"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
lib-net-tokio = { path = "../lib-net-tokio" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
ahash = { workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
async-trait = { workspace = true }
base64 = { workspace = true }
rustls = { workspace = true }
async-channel = { workspace = true }
tonic = { workspace = true }
structopt = { workspace = true }
fastrand = { workspace = true }
prost = { workspace = true }
