[package]
name = "seqnum"
version = "0.1.0"
edition = "2021"

[features]
default = []
# use tokio as file operator
# tokio_append = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = {path = "../lib", version = "0.1.0"}
lib-net-tokio = { path = "../lib-net-tokio", version = "0.1.0", features = [] }
lib-net-monoio = { path = "../lib-net-monoio", version = "0.1.0", features = [] }
common = { path = "../common", version = "0.1.0" }
monoio = {version = "0.1.4", features = []}
tokio = {version = "1.29", features = ["sync"]}
lazy_static = {version = "1.4.0"}
dashmap = "5.4"
ahash = "0.8"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
byteorder = "1.4.0"
futures = "0.3"
thread_local = "1.1.7"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1.60"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = "0.21"
toml = "0.7.5"
