[package]
name = "seqnum"
version = "0.2.5"
edition = "2021"

[features]
default = []
# use tokio as file operator
# tokio_append = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
lib-net-tokio = { path = "../lib-net-tokio", features = [] }
lib-net-monoio = { path = "../lib-net-monoio", features = [] }
common = { path = "../common" }
monoio = { workspace = true, features = ["iouring", "legacy"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }
dashmap = { workspace = true }
ahash = { workspace = true }
byteorder = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
structopt = { workspace = true }
async-trait = { workspace = true }
rustls = { workspace = true }
toml = { workspace = true }
local-sync = { workspace = true }
thread-id = "4.1"
sysinfo = "0.29"
