[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
lib = {path = "../../server/lib"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.1", features = ["window-start-dragging"] }
tokio = {version = "1.20.0", features = ["full"] }
base64 = "0.13.0"
lazy_static = "1.4.0"
tracing = "0.1.35"
futures-util = "0.3.20"
tracing-subscriber = "0.3.15"
anyhow = "1.0.65"
thiserror = "1.0.37"
rustls = "0.20.0"
async-trait = "0.1.57"
toml = "0.5.9"
rusqlite = "0.28.0"
libsqlite3-sys = "0.25.2"
tokio-rusqlite = "0.3.0"
ahash = "0.8.0"
reqwest = {version = "0.11.14", features = ["json", "multipart", "blocking"] }
chrono = { version = "0.4.22", features = ["serde", "std"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
